--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<li><a href="#intro">Hiragana</a></li>
 								<li><a href="#work">Katakana</a></li>
 								<li><a href="#about">Kanji</a></li>
-								<li><a href="#contact">Culture</a></li>
+								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -39,25 +39,86 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
+								<h2 class="major">Hiragana</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>Hiragana is one of the three writing systems in Japanese, along with Katakana and Kanji. It’s usually the first script beginners learn because it forms the foundation of the language.
+
+✔️ What Hiragana is used for:
+
+Native Japanese words
+
+Grammar particles (like wa, ga, no)
+
+Word endings (especially in verbs and adjectives)
+
+Furigana (small hiragana used to help read difficult kanji)
+
+📚 Example characters:
+あ (a), い (i), う (u), え (e), お (o)
+
+There are 46 basic characters, and when you add diacritical marks (like ゛and ゜), you get even more sounds. For example, か (ka) becomes が (ga).
+
+Learning hiragana is your first big step toward understanding and speaking Japanese. Take it one character at a time, practice regularly, and you'll be surprised how fast you progress!</p>
 							</article>
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
+								<h2 class="major">Katakana</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>atakana is one of the three writing systems in Japanese, along with Hiragana and Kanji. While Hiragana is soft and curvy, Katakana has a more angular, sharp look—and it's super useful!
+
+✔️ What Katakana is used for:
+
+Foreign loanwords (like コンピューター for computer)
+
+Foreign names (e.g. ジョン for John)
+
+Sound effects (like ピカピカ for sparkle)
+
+Emphasis (like bold or italics in English)
+
+Technical or scientific terms
+
+📚 Example characters:
+ア (a), イ (i), ウ (u), エ (e), オ (o)
+
+Katakana also has 46 basic characters, just like Hiragana, and the same diacritical marks apply. For example, カ (ka) becomes ガ (ga) with a small ゛.
+
+Katakana may seem tricky at first, but it’s a powerful tool for reading modern Japanese, especially in pop culture, menus, anime, and more. Master it, and you'll feel like a true language ninja! 💥</p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
-								<h2 class="major">About</h2>
+								<h2 class="major">Kanji</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>Kanji is the third part of the Japanese writing system, along with Hiragana and Katakana. It’s made up of Chinese-origin characters, and each one carries its own meaning.
+
+Unlike Hiragana and Katakana, which are phonetic, Kanji is logographic—each character represents an idea or concept.
+
+✔️ What Kanji is used for:
+
+Nouns (like 山 for mountain, 水 for water)
+
+Verbs and adjectives (with hiragana endings, e.g. 食べる = to eat)
+
+Names (both people and places)
+
+Adding depth and meaning to writing
+
+📚 Example characters:
+日 (sun/day), 木 (tree), 人 (person), 学 (study)
+
+There are thousands of kanji, but don’t worry—you don’t need to know all of them. About 2,000 basic kanji (常用漢字 / jouyou kanji) are commonly used in daily life.
+
+Each kanji often has more than one reading:
+
+On’yomi (Chinese reading)
+
+Kun’yomi (Japanese reading)
+
+📖 Example: 学 can be read as gaku (on’yomi) or manabu (kun’yomi, “to study”).
+
+Kanji might seem overwhelming at first, but learning them slowly will open up a whole new level of understanding. Start with common ones, use them in context, and soon you’ll see how beautiful and expressive Japanese can be.</p>
 							</article>
 
 						<!-- Contact -->
