--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Awesome</h1>
+								<h1>Daily Dose of Japanese ☀️</h1>
 								<p>Bits of Japanese language</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Hiragana</a></li>
-								<li><a href="#work">Katakana</a></li>
-								<li><a href="#about">Kanji</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#intro">Writng</a></li>
+								<li><a href="#work">Grammar</a></li>
+								<li><a href="#about">Phrase</a></li>
+							<li><a href="#contact">Contact</a></li> 
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -41,24 +41,48 @@
 							<article id="intro">
 								<h2 class="major">Hiragana</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Hiragana is one of the three writing systems in Japanese, along with Katakana and Kanji. It’s usually the first script beginners learn because it forms the foundation of the language.
+								<p>Japanese uses three main writinf system, each with its own role:
 
-✔️ What Hiragana is used for:
+1. Hiragana (ひらがな)
+Soft, curvy, and the first script most learners tackle.
+Hiragana is used for:
+
+Grammar particles (like wa, no, ga)
+
+Word endings for verbs & adjectives
 
 Native Japanese words
 
-Grammar particles (like wa, ga, no)
+Reading aid for Kanji (called furigana)
 
-Word endings (especially in verbs and adjectives)
+📌 Example: たべる (taberu – to eat)
 
-Furigana (small hiragana used to help read difficult kanji)
+2. Katakana (カタカナ)
+Angular and bold, Katakana is used to write:
 
-📚 Example characters:
-あ (a), い (i), う (u), え (e), お (o)
+Foreign loanwords (like コンピュータ – computer)
 
-There are 46 basic characters, and when you add diacritical marks (like ゛and ゜), you get even more sounds. For example, か (ka) becomes が (ga).
+Foreign names and places
 
-Learning hiragana is your first big step toward understanding and speaking Japanese. Take it one character at a time, practice regularly, and you'll be surprised how fast you progress!</p>
+Onomatopoeia (sound effects)
+
+Emphasis in writing (like italics in English)
+
+📌 Example: アイスクリーム (aisu kuriimu – ice cream)
+
+3. Kanji (漢字)
+Borrowed from Chinese, Kanji are characters that represent ideas or meanings.
+Each Kanji can have multiple readings and usually appears in:
+
+Nouns, verbs, and adjectives
+
+Names of people and places
+
+Everyday signs and labels
+
+📌 Example: 水 (mizu – water), 学 (gaku/manabu – to study/learning)
+
+</p>
 							</article>
 
 						<!-- Work -->
